--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="d-flex">
   <!-- Sidebar -->
-   <shared-sidebar></shared-sidebar>
+  <shared-sidebar></shared-sidebar>
 
   <!-- Home Page -->
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 </div>
