--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,6 +3,6 @@
   <hr class="text-light">
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">Minecraft</button>
+    <button *ngFor="let tag of tags" class="list-group-item list-group-item-action">{{tag | titlecase}}</button>
   </div>
 </div>
