--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,6 +3,8 @@
   <hr class="text-light">
 
   <div class="list-group list-reset">
-    <button *ngFor="let tag of tags" class="list-group-item list-group-item-action">{{tag | titlecase}}</button>
+    <button *ngFor="let tag of tags" class="list-group-item list-group-item-action" (click)="onSelectTag(tag)">{{tag
+      |
+      titlecase}}</button>
   </div>
 </div>
