--- a/src/app/gifs/components/card/card.component.html
+++ b/src/app/gifs/components/card/card.component.html
@@ -1,7 +1,9 @@
 <div class="card mb-2 text-center bg-dark">
   <!-- <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top"> -->
-  <shared-lazy-image [url]="gif.images.downsized_medium.url"
-    [alt]="gif.title || 'Gif sin descripción'"></shared-lazy-image>
+  <shared-lazy-image
+    [url]="gif.images.downsized_medium.url"
+    [alt]="gif.title || 'Gif sin descripción'"
+  ></shared-lazy-image>
   <div class="card-body text-white">
     <p class="card-text">{{gif.title || "Gif sin título" }}</p>
   </div>
